methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:9: error: not found: value faireV
        faireV(YELLOW);
        ^MethodsPicture:9: error: not found: value YELLOW
        faireV(YELLOW);
               ^